k8s/apps/sonarr/stg/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr-rajsingh-info-tls
  namespace: external-name
  annotations:
    cert-manager.io/cluster-issuer: rajsingh-info-global-issuer
    kubernetes.io/tls-acme: 'true'
spec:
  ingressClassName: haproxy
  rules:
  - host: sonarr.stg.rajsingh.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sonarr-ui
            port:
              number: 80
  tls:
  - secretName: sonarr-rajsingh-info-tls
    hosts:
    - sonarr.stg.rajsingh.info
